k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-helpdesk-ingress
  namespace: mini-helpdesk
spec:
  ingressClassName: nginx
  rules:
    - host: mini-helpdesk.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
